Alteracao nos ingredientes

--- a/adivinha_mais.html
+++ b/adivinha_mais.html
@@ -11,7 +11,7 @@
 
     while( contador <= quantidade) {
 
-        var ingrediente = prompt("Informe o ingrediente " + contador);
+        var ingrediente = prompt("Informe os ingredientes desejados " + contador);
 
         ingredientes.push(ingrediente);
 
