--- a/calculaIMC.html
+++ b/calculaIMC.html
@@ -12,7 +12,7 @@
     function calculaIMC(peso, altura) {
 
         var imc = Math.round (peso / (altura * altura));
-        mostra("O IMC calculado é: " + imc);
+        mostra("O valor do IMC calculado é: " + imc);
     }
 
     // var pesoLuiz = 60;
